Fixed font size that was messing up the y overflow

--- a/481 Portfolio/CookingInstructor/Shared/RecipeImageHorizontal.razor.css
+++ b/481 Portfolio/CookingInstructor/Shared/RecipeImageHorizontal.razor.css
@@ -38,11 +38,14 @@
 
 .recipeName h2
 {
-    font-size: 20px;
+    font-size: 16px;
+    font-weight:525;
+
 }
 
 .recipeInfo{
     vertical-align: middle;
+    
 }
 
 .RecipeInfo{
@@ -52,13 +55,13 @@
 .difficultyLevel{
     flex-grow: 8;
     text-align: right;
-    margin-top: 10px;
-    margin-right: 20px;
+    margin-top: 5px;
+    margin-right: 10px;
 }
 
 
 .spicyLevel{
-    margin-top: 10px;
+    margin-top: 5px;
     margin-left: 10px;
 }
 
